Change log
==========

1.12 (unreleased)
-----------------


1.11 (2011-08-09)
-----------------
- Now you can use ``Git`` alongside ``Mercurial`` and 
  ``Subversion`` to use as version control system.


1.10 (2011-08-09)
-----------------
- Taking more control of logging by defining our own logger and
  suppressing standard Sphinx log output. The new script flag 
  ``-v`` or ``--verbose`` enables the user to determine what to 
  show. Without it, only serious warnings are shown. With ``-v``
  specified once you will see script progress output and notes 
  about Sphinx build warnings. With ``-vv`` all Sphinx output 
  is shown as well.


1.9 (2011-08-09)
----------------
- Now using pkg_resources.parse_version to parse the tag names and 
  produce correct release ordering for each package
- Instead of using a flag to set the revision control system 
  across all packages you now specify the revision control system 
  per package with a simple prefix::

    [hg]http://myserver/hg/mypackage
    [svn]https://myservr/svnmypackage

  For backwards compatibility, all URLs without prefix are assumed 
  to point to a Subversion repository.


1.8 (2011-08-05)
----------------
- Feature: You can now use either ``Subversion`` or ``Mercurial``
  to check out documented packages.


1.7 (2010-08-03)
----------------
- Feature: If no standard package documentation can be found, 
  the setuptools ``long_description`` settings is used as a 
  last fallback to at least generate a single page for a package.

- Feature: To style the ``long_description`` fallback ReST 
  documentation, a new parameter ``fallback-css`` can be used to 
  provide a path to a CSS file.


1.6 (2010-07-31)
----------------
- Bug: If the ``z3csphinx-output-directory`` was set, all its 
  contained packages ended up on the index document. Now this 
  only happens if no SVN source URLs are otherwise provided.
  If they are, only packages from those source URLs are 