@@ -3,6 +3,9 @@ Change log
 
 1.12 (unreleased)
 -----------------
+- Be more resilient when simple ReST text compilation fails. 
+  Now the whole documentation build process won't just fail 
+  at that point.
 
 
 1.11 (2011-08-09)
